# aws-object-search

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  deploy  pyproject.toml  searchGlacier.py
docs/: README-searchGlacier.md  aws-object-search.md  development.md  tape-search-tools.md
release-notes/: v1.0.0-rc1.md  v1.0.0-rc2.md
scripts/: fetch-micromamba.sh  sanitize-command
src/aws_object_search/: __init__.py  catalog.py  entry.py  logging.py  s3_wrapper.py  tantivy_wrapper.py
tests/: conftest.py  test_catalog.py  test_entry.py  test_tantivy_wrapper.py  test_version.py
tests/resources/: current_contents.tsv
tests/resources/simple_catalog/: 20250503-164831-hgsc-a-1-2-3.tsv  20250504-164832-hgsc-a-1-2-3.tsv  20250504-164833-hgsc-c-123.tsv  20250504-164834-hgsc-d.tsv  20250505-164832-hgsc-b123.tsv
