[project]
name = "aws-object-search"
version = "1.0.0-rc2"
description = "Tools for searching the contents of S3 buckets"
authors = [
    { name = "Mingxuan Guan", email = "mingxuan.guan@bcm.edu" },
    { name = "Walker Hale", email = "hale@bcm.edu" },
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "boto3",
    "tantivy",
]
[project.optional-dependencies]
dev = ["pytest>=8.4", "pre-commit>=4.3", "ruff>=0.14", "gitlint>=0.19"]
[project.scripts]
aos-scan = "aws_object_search.entry:aos_scan"
search-aws = "aws_object_search.entry:search_aws"
"search.py" = "aws_object_search.entry:search_py"
[project.urls]
Homepage = "https://github.com/BCM-HGSC/aws-object-search"
Issues = "https://github.com/BCM-HGSC/aws-object-search/issues"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: mark a test as an integration test",
]
addopts = "--strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 88
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E722", # Do not use bare `except` (allow in some cases)
]

[tool.ruff.lint.per-file-ignores]
"src/aws_object_search/logging.py" = ["E722"]  # Allow bare except for optional rich import
